--- a/config/database.yml
+++ b/config/database.yml
@@ -14,21 +14,22 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  encoding: utf-8
+  pool: 5
+  username: kozzze
+  password: 123
+  host: localhost
 
 
 development:
   <<: *default
-  database: gorilla_cars_development
+  database: GorillaCars_development
 
   # The specified database role being used to connect to PostgreSQL.
-  # To create additional roles in PostgreSQL see `$ createuser --help`.
+  # To create additional roles in PostgreSQL see $ createuser --help.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: gorilla_cars
+  #username: exam_proj
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -56,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: gorilla_cars_test
+  database: GorillaCars_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,18 +82,18 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: gorilla_cars_production
-    username: gorilla_cars
-    password: <%= ENV["GORILLA_CARS_DATABASE_PASSWORD"] %>
+    database: GorillaCars_production
+    username: kozzze
+    password: <%= ENV["EXAM_PROJ_DATABASE_PASSWORD"] %>
   cache:
     <<: *primary_production
-    database: gorilla_cars_production_cache
+    database: GorillaCars_production_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_production
-    database: gorilla_cars_production_queue
+    database: GorillaCars_production_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
-    database: gorilla_cars_production_cable
+    database: GorillaCars_production_cable
     migrations_paths: db/cable_migrate
